--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Flask==0.9
+Flask-MongoAlchemy==0.5.4
 Flask-WTF==0.8
 Jinja2==2.6
+MongoAlchemy==0.12.1
 WTForms==1.0.2
 Werkzeug==0.8.3
+pymongo==2.3
 wsgiref==0.1.2
