--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Flask==0.9
+Flask-Cache==0.7.1
+Flask-Cache-PyLibMC==0.1
 Flask-Login==0.1.3
 Flask-MongoAlchemy==0.5.4
 Flask-WTF==0.8
@@ -8,9 +10,12 @@ PyJWT==0.1.2
 WTForms==1.0.2
 Werkzeug==0.8.3
 httplib2==0.7.5
+mock==0.8.0
+nose==1.1.2
 py-bcrypt==0.2
+pylibmc==1.2.3
 pymongo==2.3
 python-memcached==1.48
 sunlight==1.1.5
-twilio==3.3.11
+twilio==3.3.10
 wsgiref==0.1.2
