--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 Flask==0.9
 Flask-Cache==0.7.1
 Flask-Cache-PyLibMC==0.1
+Flask-Login==0.1.3
+Flask-MongoAlchemy==0.5.4
 Flask-WTF==0.8
 Jinja2==2.6
+MongoAlchemy==0.12.1
 PyJWT==0.1.2
 WTForms==1.0.2
 Werkzeug==0.8.3
@@ -12,8 +15,10 @@ httplib2==0.7.5
 mock==0.8.0
 nose==1.1.2
 parsedatetime==0.8.7
+phonenumbers==5.2b1
 py-bcrypt==0.2
 pylibmc==1.2.3
+pymongo==2.3
 python-memcached==1.48
 sunlight==1.1.5
 twilio==3.3.11
